[package]
name = "pixel_editor"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
glutin = "0.24"
rusttype = "0.9.2"
image = "0.23.8"
rand = "0.7.3"
nfd = "0.0.4"
gl = "0.10.0"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
