[package]
name = "pixed2"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.2"
image = "0.23.8"
rand = "0.7.3"
nfd = "0.0.4"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["bundled", "unsafe_textures"]
