[package]
name = "pixel_editor"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.2"
image = "0.23.8"
rand = "0.7.3"
macroquad = "0.4.4"

[profile.release]
# opt-level = 3
# lto = true
debug = true
# codegen-units = 1
# panic = "abort"
